force-app/main/default/objects/B25__Abr_Queue_Item__c/B25__Abr_Queue_Item__c.object-meta.xml
<CustomObject>
    <label>Abr Queue Item</label>
    <nameField>
        <displayFormat>ABRQI-{0000000}</displayFormat>
        <label>Abr Queue Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abr Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>