force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Automated_Booking_Rule__c.field-meta.xml
<CustomField>
    <fullName>B25__Automated_Booking_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automated Booking Rule</label>
    <referenceTo>B25__AutomatedBookingRule__c</referenceTo>
    <relationshipName>ABR_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>