force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Context__c.field-meta.xml
<CustomField>
    <fullName>B25__Context__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>