force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>B25__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>