force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Extended_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>B25__Extended_Error_Message__c</fullName>
    <label>Extended Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>