force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>B25__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ABR_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>