force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Recurring_Reservations_Deleted__c.field-meta.xml
<CustomField>
    <fullName>B25__Recurring_Reservations_Deleted__c</fullName>
    <label>Recurring Reservations Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>