force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__Reservations_Upserted__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservations_Upserted__c</fullName>
    <label>Reservations Upserted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>