force-app/main/default/objects/B25__Abr_Queue_Item__c/fields/B25__User_To_Notify__c.field-meta.xml
<CustomField>
    <fullName>B25__User_To_Notify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User To Notify</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ABR_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>